src/core/Claroline/PluginBundle/Tests/stub/plugin/Invalid/UnloadableBundleClass3/InvalidUnloadableBundleClass3.php
<?php

namespace Invalid\UnexpectedNamespace;

use Claroline\PluginBundle\AbstractType\ClarolinePlugin;

class InvalidUnloadableBundleClass3
{
    /*
     * Unloadable because the bundle namespace doesn't
     * match the bundle directory
     */
}